# ic-llm

./: .gitignore  README.md
backend-qwen3/: Cargo.toml  README.md  dfx.json  package-lock.json
backend-qwen3/src/qwen3_backend/: Cargo.toml
backend-qwen3/src/qwen3_backend/src/: candle.rs  lib.rs  model.rs  qwen3.rs
backend-qwen3/src/qwen3_frontend/: package.json
backend-qwen3/src/qwen3_frontend/src/: App.jsx
browser-qwen/: .ic-assets.json  Cargo.toml  LICENSE  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
browser-qwen/src/frontend/: index.html  package-lock.json  package.json  vite.config.js
browser-qwen/src/frontend/assets/wasm/: candle_wasm_example_quant_qwen3.js
browser-qwen/src/frontend/public/: .ic-assets.json5  register-sw.js
browser-qwen/src/frontend/public/assets/wasm/: candle_wasm_example_quant_qwen3.js  candle_wasm_example_quant_qwen3_bg.wasm
browser-qwen/src/frontend/src/: index.scss  main.jsx
browser-qwen/src/frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ModelLoader.jsx
browser-qwen/src/frontend/src/hooks/: useQwenModel.js
qwen3/: Cargo.toml  build.sh  dfx.json  package.json  upload_qwen_parallel.py
qwen3/.cargo/: config.toml
qwen3/src/qwen3_backend/: Cargo.toml
qwen3/src/qwen3_backend/benches/: inference_bench.rs
qwen3/src/qwen3_backend/src/: candle.rs  lib.rs  model.rs  storage.rs
