[workspace]
members = [
    "src/qwen3_backend"
]
resolver = "2"

[patch.crates-io]
getrandom = { git = "https://github.com/DrJesseGlass/getrandom", tag = "v0.3.0-determinism.2" }

[patch.'https://github.com/DrJesseGlass/candle']
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"