[package]
name = "qwen3_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = [] #["simd-flash-attn"]
#simd-flash-attn = ["candle-nn/simd-flash-attn", "candle-transformers/simd-flash-attn"]

[dependencies]
# IC dependencies
candid = "0.10.20"
ic-cdk = "0.18.7"
ic-stable-structures = "0.7.2"
ic-cdk-timers = "0.12.2"
serde = { version = "1.0", features = ["derive"] }

# Candle dependencies
#candle-core/nn/transformers = {version = "0.9.1", default-features = false}
# this more complex set up is all to enable a minor tweak to Qwen3
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }
candle-transformers = { git = "https://github.com/DrJesseGlass/candle", branch = "wasm/qwen/step", default-features = false }

tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# Utilities
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"



