[package]
name = "qwen3_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
# IC dependencies
candid = "0.10.20"
ic-cdk = "0.18.7"
ic-stable-structures = "0.7.2"
ic-cdk-timers = "0.12.2"
serde = { version = "1.0", features = ["derive"] }

# Dev kit (your utilities) - IMPORTANT: Enable required features
#ic-dev-kit-rs = { git = "https://github.com/DrJesseGlass/ic-dev-kit-rs", branch = "main", features = ["text-generation", "storage", "candle", "telemetry"] }
ic-dev-kit-rs = { path = "../../../../ic-dev-kit-rs", features = ["text-generation", "storage", "candle", "telemetry"] }

# Candle dependencies
#qwen3 not in 0.9.1 (reset cache still in PR)
#candle-core = {version = "0.9.1", default-features = false}
#candle-nn = {version = "0.9.1", default-features = false}
#candle-transformers = {version = "0.9.1", default-features = false}
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false }

# crate does not include examples
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# Utilities
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"