[package]
name = "qwen3-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["simd-flash-attn"]
simd-flash-attn = ["candle-nn/simd-flash-attn", "candle-transformers/simd-flash-attn"]

[dependencies]
# IC dependencies
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }

# Candle dependencies
candle-core = { version = "0.6", default-features = false }
candle-nn = { version = "0.6", default-features = false }
candle-transformers = { version = "0.6", default-features = false, features = ["simd-flash-attn"] }
tokenizers = { version = "0.15", default-features = false, features = ["unstable_wasm"] }

# Utilities
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"