[package]
name = "qwen3_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["simd-flash-attn"]
simd-flash-attn = ["candle-nn/simd-flash-attn", "candle-transformers/simd-flash-attn"]

[dependencies]
# IC dependencies
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }

# Candle dependencies
candle-core = { git = "https://github.com/DrJesseGlass/candle", branch = "wasm/examples/qwen", default-features = false }
candle-nn = { git = "https://github.com/DrJesseGlass/candle", branch = "wasm/examples/qwen", default-features = false }
candle-transformers = { git = "https://github.com/DrJesseGlass/candle", branch = "wasm/examples/qwen", default-features = false, features = ["simd-flash-attn"] }
tokenizers = { version = "0.22.1", default-features = false, features = ["unstable_wasm"] }

# WASM/Random support
getrandom = { version = "0.3", features = ["wasm_js"], default-features = false }

# Utilities
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"



